solve the overflow of height on mobile devices

--- a/module2-solution/css/index.css
+++ b/module2-solution/css/index.css
@@ -43,7 +43,7 @@
 		.mid{
 			background-color: gray;
 			border: 2px solid black;
-			height: 150px;
+			height: 180px;
 			margin:10px;
 		}
 
